2007-06-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* fileio.c (Fdo_auto_save): Revert last patch installed unwillingly as
	part of the 2007-06-27 change to syms_of_fileio.

2007-06-28  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* macterm.c [USE_MAC_TSM] (mac_handle_text_input_event):
	Check WINDOWP before using XWINDOW.  Consolidate return statements.

2007-06-27  Richard Stallman  <rms@gnu.org>

	* fileio.c (syms_of_fileio) <after-insert-file-functions>: Doc fix.

2007-06-27  Juanma Barranquero  <lekktu@gmail.com>

	* buffer.c (syms_of_buffer) <selective-display>: Fix typo in docstring.

2007-06-26  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* gmalloc.c [HAVE_GTK_AND_PTHREAD]: Check this after including config.h.
	(_aligned_blocks_mutex) [USE_PTHREAD]: New variable.
	(LOCK_ALIGNED_BLOCKS, UNLOCK_ALIGNED_BLOCKS): New macros.
	(_free_internal, memalign): Use them.
	(_malloc_mutex, _aligned_blocks_mutex) [USE_PTHREAD]:
	Initialize to PTHREAD_MUTEX_INITIALIZER.
	(malloc_initialize_1) [USE_PTHREAD]: Don't use recursive mutex.
	(morecore_nolock): Rename from morecore.  All uses changed.
	Use only nolock versions of internal allocation functions.
	(_malloc_internal_nolock, _realloc_internal_nolock)
	(_free_internal_nolock): New functions created from
	_malloc_internal, _realloc_internal, and _free_internal.
	(_malloc_internal, _realloc_internal, _free_internal): Use them.
	Copy hook value to automatic variable before its use.
	(memalign): Copy hook value to automatic variable before its use.

2007-06-26  Kenichi Handa  <handa@m17n.org>

	* coding.c (Ffind_operation_coding_system): Docstring improved.
	(syms_of_coding): Docstring of `file-coding-system-alist' improved.

2007-06-25  David Kastrup  <dak@gnu.org>

	* keymap.c (Fcurrent_active_maps): Add `position' argument.
	(Fwhere_is_internal): Adjust call to `current-active-maps' to
	cater for additional parameter.

	* keymap.h: Adjust number of parameters to `current-active-maps'.
