@@ -1,3 +1,8 @@
+2007-07-01  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* minibuf.c (Fcompleting_read): New value `confirm-only'
+	for `require-match'.
+
 2007-06-28  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* fileio.c (Fdo_auto_save): Revert last patch installed unwillingly as
